<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:text="Hello World!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/keychain_install_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keychain_install_credentials" />

    <Button
        android:id="@+id/keychain_request_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keychain_request_credentials" />

    <Button
        android:id="@+id/keystore_list_aliases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keystore_list_aliases" />

    <Button
        android:id="@+id/keystore_generate_private_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keystore_generate_private_key" />

    <Button
        android:id="@+id/keystore_generate_secret_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keystore_generate_secret_key" />

    <Button
        android:id="@+id/keystore_sign_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keystore_sign_verify" />

    <Button
        android:id="@+id/keystore_encrypt_decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keystore_encrypt_decrypt" />
</LinearLayout>
